elk-k8s/elastic-ss.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: elasticsearch-app
  namespace: kube-system
  labels:
    k8s-app: elasticsearch-app
spec:
  serviceName: elasticsearch-app
  replicas: 2
  updateStrategy:
    type: RollingUpdate
  selector:
    matchLabels:
      k8s-app: elasticsearch-app
  template:
    metadata:
      labels:
        k8s-app: elasticsearch-app
    spec:
      serviceAccountName: elasticsearch-app
      containers:
      - image: elasticsearch:6.8.4
        name: elasticsearch-app
        ports:
        - containerPort: 9200
          name: db
          protocol: TCP
        - containerPort: 9300
          name: transport
          protocol: TCP
        volumeMounts:
        - name: elasticsearch-app
          mountPath: /data
      volumes:
      - name: elasticsearch-app
        emptyDir: {}
