elk-k8s/elastic-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch-app
  namespace: kube-system
  labels:
    k8s-app: elasticsearch-app
spec:
  ports:
  - port: 9200
    protocol: TCP
    targetPort: db
  selector:
    k8s-app: elasticsearch-app
